@@ -52,6 +52,7 @@ Bug Fixes::
 * don't crash if page background image value is empty (interpret as "none")
 * prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
 * remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)
+* fix page number of index entries in prepress book when page numbering starts after toc and toc is inserted using macro (#2487)
 
 == 2.3.11 (2024-01-23) - @mojavelinux
 
